# oxool-module-sample

./: .gitignore  Makefile.am  README.md  configure.ac  create_your_module.sh  sample.spec.in  sample.xml.in
debian/: changelog  control  copyright  oxool-module-sample.install  oxool-module-sample.postinst  rules
html/: admin.html
html/css/: sample.css
html/js/: AdminSocketConfigSettings.js
oxoffice_oxt/: sample.oxt
src/: Makefile.am  sample.cpp  sample.h
